💄 Add small styles fixes
- Make sure the images isn't selectable.
- Doesn't make the white space under the images clickable (linkable).

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -59,3 +59,6 @@ pre > code {
 .large-text {
   font-size: 2rem;
 }
+.no-select {
+  user-select: none;
+}
